Defining the  model

--- a/model/autisimPrediction.ipynb
+++ b/model/autisimPrediction.ipynb
@@ -3924,7 +3924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "ca890cfc",
    "metadata": {},
    "outputs": [
@@ -3950,21 +3950,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "73e1ef03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#function to replace the outliers with the median\n",
+    "def replace_outliers_with_median(df, column):\n",
+    "    Q1 = df[column].quantile(0.25)\n",
+    "    Q3 = df[column].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    median_value = df[column].median()\n",
+    "    \n",
+    "    df[column] = np.where((df[column] < lower_bound) | (df[column] > upper_bound), median_value, df[column])\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e488e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replace outliers in age and result columns\n",
+    "replace_outliers_with_median(df, 'age')\n",
+    "replace_outliers_with_median(df, 'result')  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ecdb3847",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 20)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c01eb081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Train test split\n",
+    "X = df.drop(columns=['Class/ASD'])\n",
+    "Y = df['Class/ASD']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "11f57a61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A1_Score  A2_Score  A3_Score  A4_Score  A5_Score  A6_Score  A7_Score  \\\n",
+      "0           1         0         1         0         1         0         1   \n",
+      "1           0         0         0         0         0         0         0   \n",
+      "2           1         1         1         1         1         1         1   \n",
+      "3           0         0         0         0         0         0         0   \n",
+      "4           0         0         0         0         0         0         0   \n",
+      "..        ...       ...       ...       ...       ...       ...       ...   \n",
+      "795         0         1         0         0         0         0         0   \n",
+      "796         0         1         1         0         0         1         0   \n",
+      "797         0         0         0         0         0         0         0   \n",
+      "798         0         0         0         0         0         0         0   \n",
+      "799         0         1         0         0         0         0         0   \n",
+      "\n",
+      "     A8_Score  A9_Score  A10_Score   age  gender  ethnicity  jaundice  austim  \\\n",
+      "0           0         1          1  38.0       0          5         0       0   \n",
+      "1           0         0          0  47.0       1          5         0       0   \n",
+      "2           1         1          1   7.0       1          9         0       1   \n",
+      "3           0         0          0  23.0       0          5         0       0   \n",
+      "4           0         0          0  43.0       1          5         0       0   \n",
+      "..        ...       ...        ...   ...     ...        ...       ...     ...   \n",
+      "795         0         1          1  16.0       1          2         0       0   \n",
+      "796         1         1          1  20.0       1          9         0       0   \n",
+      "797         0         0          0   5.0       1          7         1       0   \n",
+      "798         0         0          0  16.0       0          5         0       0   \n",
+      "799         0         0          0  46.0       0          5         0       0   \n",
+      "\n",
+      "     used_app_before     result  relation  country_of_res  \n",
+      "0                  0   6.351166         1               6  \n",
+      "1                  0   2.255185         1              23  \n",
+      "2                  0  14.851484         1              52  \n",
+      "3                  0   2.276617         1              52  \n",
+      "4                  0  -4.777286         1              44  \n",
+      "..               ...        ...       ...             ...  \n",
+      "795                0  12.999501         1              34  \n",
+      "796                0  13.561518         1              16  \n",
+      "797                0   2.653177         1              34  \n",
+      "798                0   9.069342         1              14  \n",
+      "799                1   2.243304         1              50  \n",
+      "\n",
+      "[800 rows x 19 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ef8d3899",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42, stratify=Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d8c8b14f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(160, 19)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "9c4a3708",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(640, 19)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "0f787941",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Class/ASD\n",
+       "0    128\n",
+       "1     32\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "5eb06e72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Class/ASD\n",
+       "0    511\n",
+       "1    129\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_train.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "id": "13720bf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#We will use SMOTE to oversample the minority class"
+    "#We will use SMOTE to fix the class imbalance using minority oversampling technique\n",
+    "smote = SMOTE(random_state=42)  # Create an instance of SMOTE\n",
+    "X_train_smote, Y_train_smote = smote.fit_resample(X_train, Y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "814436d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 19)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_smote.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "5594fa26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y_train_smote.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "6048c364",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Class/ASD\n",
+       "0    511\n",
+       "1    511\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_train_smote.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "3c8a7ab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#List of classifiers to be used\n",
+    "models = {\n",
+    "    'Decision Tree': DecisionTreeClassifier(random_state= 42),\n",
+    "    'Random Forest': RandomForestClassifier(random_state=42)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d6c46f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
