--- a/model/autisimPrediction.ipynb
+++ b/model/autisimPrediction.ipynb
@@ -5347,6 +5347,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "id": "f4008bd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "columns = {\n",
+    "    'data_columns': [col.lower() for col in X.columns]\n",
+    "}\n",
+    "with open('autism_columns.json', 'w') as f:\n",
+    "    f.write(json.dumps(columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "f4f9643c",
    "metadata": {},
