Server implementation and spelling correction

--- a/model/autisimPrediction.ipynb
+++ b/model/autisimPrediction.ipynb
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "13aa69ae",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1035,7 @@
     }
    ],
    "source": [
-    "#Going theugh the columns to identify categorical features\n",
+    "#Going through the columns to identify categorical features\n",
     "#and numerical features\n",
     "#Categorical features are those which have a limited number of values\n",
     "#Numerical features are those which can take any value in a range\n",
